# OneSync

./: .gitignore  .roomodes  OneSync.sln  onesysnc-roo-code.yaml  start-app.bat
SyncUI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Program.cs  Protocol.cs  ProtocolGrpc.cs  SyncUI.csproj  SyncUI.sln
SyncUI/Converters/: BoolToTitleConverter.cs  CommonConverters.cs  InverseBoolConverter.cs  StatusConverters.cs
SyncUI/Forms/: FileListForm.cs  MainForm.cs  SyncJobForm.cs
SyncUI/Models/: FileNode.cs  SyncJob.cs
SyncUI/Properties/: launchSettings.json
SyncUI/Services/: FileSystemWatcherService.cs  GrpcSyncClient.cs  NotificationService.cs
docs/: COMEXCEPTION_FIX_GUIDE.md  COMEXCEPTION_FIX_STATUS.md  COMEXCEPTION_FIX_SUMMARY.md  Complete System Architecture.txt  QUICK_FIX_REFERENCE.md  SYNCUI_IMPLEMENTATION_SUMMARY.md  SYNCUI_REORGANIZATION_SUMMARY.md  SYNCUI_WINDOWS_CONVERSION_SUMMARY.md  SYNCUI_WINDOWS_ONLY_CONVERSION.md  TASK_COMPLETED.md  how-to-run.docx  structure-SyncUI.md  structure-sync-engine.txt
scripts/: diagnose-maui-comexception.ps1  install-windowsappsdk.bat
sync-engine/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.rs
sync-engine/src/: lib.rs  main.rs
sync-engine/src/core/: differ.rs  mod.rs  orchestrator.rs  scanner.rs  watcher.rs
sync-engine/src/ipc/: grpc_server.rs  mod.rs  protocol.proto
sync-engine/src/models/: file_node.rs  mod.rs  sync_job.rs
sync-engine/src/network/: mod.rs  protocols.rs  rsync_algorithm.rs  transfer.rs
sync-engine/src/storage/: database.rs  journal.rs  metadata.rs  mod.rs
sync-engine/tests/: integration_test.rs
(+16 files in other folders)
