[package]
name = "sync-engine"
version = "0.1.0"
edition = "2021"
authors = ["OneSync Team"]
description = "High-performance file synchronization engine with block-level delta transfer"
license = "MIT OR Apache-2.0"

[lib]
name = "sync_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sync-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# gRPC and IPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }
rusqlite_migration = "1.0"

# Cryptography
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

# Compression
zstd = "0.13"
lz4 = "1.24"

# Filesystem
notify = "6.1"
walkdir = "2.4"
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
